<resources>
    <string name="app_name">Santo Domingo Mini Guide</string>

    <!-- Beginning of strings used in activity_main.xml -->
    <string name="app_title">Santo Domingo</string>
<<<<<<< HEAD
    <string name="app_subheading1">The first city of the New World.</string>
||||||| merged common ancestors
    <string name="app_subheading1">The oldest city in the New World.</string>
=======
    <string name="app_subheading1">The first city in the New World.</string>
>>>>>>> b4ae7b28e28e64ad3f6f318b1619af7075ebc40d
    <string name="app_subheading2">Tips from a born and raised\u0020</string>
    <string name="demonym">capitaleña.</string>
    <string name="guide_me_button">Guide me!</string>
    <string name="content_description">Picture of Alcázar de Colón</string>
    <!-- End of strings used in activity_main.xml -->

    <!-- Beginning of strings used in TouristTipsCategoryAdapter.java -->
    <string name="fragment_label_sights">Sights</string>
    <string name="fragment_label_eateries">Eateries</string>
    <string name="fragment_label_hotels">Hotels</string>
    <string name="fragment_label_events">Events</string>
    <!-- End of strings used in TouristTipsCategoryAdapter.java -->

    <!-- Beginning of strings used in tourist_guide_list_item.xml -->
    <string name="practical_info_subtitle">Practical info</string>
    <string name="view_on_maps_button">View on Maps</string>
    <!-- End of strings used in tourist_guide_list_item.xml -->

    <!-- Beginning of strings used in the footer -->
    <string name="footer_part_1">Made with\u0020</string>
    <string name="footer_part_2">\u0020for all things\u0020</string>
    <!-- End of strings used in the footer -->

    <!-- Beginning of strings used in SightsFragment.java,
    EateriesFragment.java, HotelsFragment.java, EventsFragment.java -->
    <string name="country_iso_code">DO</string>
    <!-- End of strings used in SightsFragment.java,
    EateriesFragment.java, HotelsFragment.java, EventsFragment.java -->

    <!-- Beginning of strings used in tourist_tip_details.xml -->
    <string name="photo_content_description">Main photo of tourist tip</string>
    <string name="map_content_description">Map showing one tourist tip</string>
    <string name="icon_content_description">Icon</string>
    <!-- End of strings used in tourist_tip_details.xml -->

</resources>
